<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NBRK Rates</string>
    <string name="no_network_connection">No network connection available</string>
    <string name="no_data_received">Could not receive rates</string>
    <string name="refresh">Refresh</string>
    <string name="date">Date</string>
    <string name="settings">Settings</string>
    <string name="settings_display_currency">Display currency</string>
    <string name="loading">Loading...</string>
    <string name="select">Currency Rates on Date</string>
    <string name="title">Rates on</string>
    <string name="AUD">AUSTRALIAN DOLLAR</string>
    <string name="GBP">GREAT BRITAIN POUND</string>
    <string name="BYR">BELARUS ROUBLE</string>
    <string name="BRL">BRAZILIAN REAL</string>
    <string name="HUF">HUNGARIAN FORINT</string>
    <string name="HKD">HONG KONG DOLLAR</string>
    <string name="DKK">DANISH KRONA</string>
    <string name="AED">UAE DIRHAM</string>
    <string name="USD">US DOLLAR</string>
    <string name="EUR">EURO</string>
    <string name="CAD">CANADIAN DOLLAR</string>
    <string name="CNY">CHINESE YUAN</string>
    <string name="KWD">KUWAIT DINAR</string>
    <string name="KGS">KYRGYZIAN SOM</string>
    <string name="LVL">LATVIAN LAT</string>
    <string name="LTL">LITHUANIAN LIT</string>
    <string name="MDL">MOLDAVIAN LEY</string>
    <string name="MYR">MALAYSIAN RINGGIT</string>
    <string name="NOK">NORWEGIAN KRONA</string>
    <string name="PLN">POLISH ZLOTY</string>
    <string name="SAR">SAUDI RIYAL</string>
    <string name="RUB">RUSSIAN ROUBLE</string>
    <string name="XDR">SDR</string>
    <string name="SGD">SINGAPORE DOLLAR</string>
    <string name="TJS">TAJIKISTAN SOMONI</string>
    <string name="TRY">TURKISH LIRA</string>
    <string name="UZS">UZBEKISTAN SUM</string>
    <string name="UAH">UKRAINIAN GRIVNA</string>
    <string name="CZK">CRECH KORUNA</string>
    <string name="SEK">SWEDISH KRONA</string>
    <string name="CHF">SWISS FRANC</string>
    <string name="ZAR">SOUTH AFRICAN RAND</string>
    <string name="KRW">SOUTH KOREAN WON</string>
    <string name="JPY">JAPANESE YEN</string>
    <string name="EEK">ESTONIAN KRONA</string>
    <string name="admob_publisher_id">a150d2d17822fc0</string>
</resources>
